Add note about sailbot_workspace only run conditions

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,9 +4,10 @@ on:
   push:
     branches:
       - main
+      # sailbot_workspace only: raye branch used to run Raye's software
       - raye
   pull_request:
-  # Regression tests runs every Friday at 1:00am UTC
+  # sailbot_workspace only: regression tests runs every Friday at 1:00am UTC
   schedule:
     - cron: '0 1 * * 5'
   workflow_dispatch:
