--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,24 +7,15 @@
 //      container, but if you use, for example, the "capAdd" JSON field then it will NOT be picked up by the script
 //      without changes
 {
-	"dockerFile": "Dockerfile",
-	"build": {
-		"args": {
-			"WORKSPACE": "${containerWorkspaceFolder}"
-		}
-	},
+	"name": "Sailbot Workspace",
+	"dockerComposeFile": "docker-compose.yml",
+	"service": "app",
+	"workspaceFolder": "/workspaces/sailbot_workspace",
 	"remoteUser": "ros",
-	// Do not add comments to any lines within the runArgs array - it breaks the start_container.sh script
-	"runArgs": [
-		"--cap-add=SYS_PTRACE",
-		"--cap-add=NET_ADMIN",
-		"--network=host",
-		"--security-opt=seccomp:unconfined",
-		"--security-opt=apparmor:unconfined"
-	],
 	"containerEnv": {
 		"LIBGL_ALWAYS_SOFTWARE": "1" // Needed for software rendering of opengl
 	},
+
 	// Set *default* container specific settings.json values on container create.
 	"customizations": {
 		"vscode": {
@@ -34,8 +25,7 @@
 						"path": "bash",
 						"icon": "terminal-bash"
 					}
-				},
-				"terminal.integrated.defaultProfile.linux": "bash"
+				}
 			},
 			"extensions": [
 				// template repo
@@ -57,19 +47,17 @@
 				"bierner.markdown-preview-github-styles",
 				"cschlosser.doxdocgen",
 				"DavidAnson.vscode-markdownlint",
+				"dbaeumer.vscode-eslint",
 				"eamodio.gitlens",
 				"jeff-hykin.better-cpp-syntax",
 				"KevinRose.vsc-python-indent",
 				"llvm-vs-code-extensions.vscode-clangd",
+				"mongodb.mongodb-vscode",
 				"ms-vsliveshare.vsliveshare",
 				"njpwerner.autodocstring",
 				"vscode-icons-team.vscode-icons",
 				"zxh404.vscode-proto3"
 			]
 		}
-	},
-	"mounts": [
-		"source=sailbot-new-project-bashhistory,target=/home/ros/commandhistory,type=volume",
-		"source=sailbot-new-project-roslog,target=/home/ros/.ros/log,type=volume"
-	]
+	}
 }
