--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -15,10 +15,10 @@ services:
     command: sleep infinity
 
     # Runs on the same network as the database container, allows "forwardPorts" in devcontainer.json function.
-    network_mode: service:db
+    network_mode: service:mongodb
 
   # connection string: mongodb://localhost:27017
-  db:
+  mongodb:
     image: mongo:latest
     restart: unless-stopped
     volumes:
@@ -44,7 +44,7 @@ services:
       - GF_INSTALL_PLUGINS=meln5674-mongodb-community=https://github.com/meln5674/grafana-mongodb-community-plugin/releases/download/v0.1.2/meln5674-mongodb-community.zip
 
     # Runs on the same network as the database container, allows "forwardPorts" in devcontainer.json function.
-    network_mode: service:db
+    network_mode: service:mongodb
 
     # Add "forwardPorts": ["3000"] to **devcontainer.json** to forward MongoDB locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
