--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -36,9 +36,8 @@ services:
   grafana:
     image: bitnami/grafana:latest
     restart: unless-stopped
-    # volumes:
-    #   - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
-    #   - grafana-data:/var/lib/grafana
+    volumes:
+      - grafana-data:/opt/bitnami/grafana/data
     environment:
       - GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS=meln5674-mongodb-community
       - GF_INSTALL_PLUGINS=meln5674-mongodb-community=https://github.com/meln5674/grafana-mongodb-community-plugin/releases/download/v0.1.2/meln5674-mongodb-community.zip
@@ -53,4 +52,4 @@ volumes:
   sailbot-new-project-bashhistory:
   sailbot-new-project-roslog:
   mongodb-data:
-  # grafana-data:
+  grafana-data:
