Create local-base image

--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       tag:
-        description: 'Base and dev image tag'
+        description: 'Tag of the base, local-base, and dev images'
         required: false
         type: string
         default: 'main'
@@ -44,6 +44,18 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           target: base
+
+      - name: Build and push local-base
+        uses: docker/build-push-action@v4
+        with:
+          context: "{{defaultContext}}:.devcontainer/base-dev"
+          file: base-dev.Dockerfile
+          push: true
+          tags: ghcr.io/ubcsailbot/sailbot_workspace/local-base:${{ inputs.tag }}
+          platforms: linux/arm64,linux/amd64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          target: local-base
 
       - name: Build and push dev
         uses: docker/build-push-action@v4
