--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -61,8 +61,20 @@ services:
     #  MONGO_INITDB_ROOT_PASSWORD: example
     #  MONGO_INITDB_DATABASE: your-database-here
 
+  website:
+    build:
+      context: ..
+      dockerfile: .devcontainer/website/website.Dockerfile
+    volumes:
+      - ../src/website:/website:cached
+      - website-node-modules:/website/node_modules:delegated
+
+    # Runs on the same network as the workspace container, allows "forwardPorts" in devcontainer.json function.
+    network_mode: service:sailbot-workspace
+
 volumes:
   grafana-data:
   mongodb-data:
+  website-node-modules:
   sailbot-new-project-bashhistory:
   sailbot-new-project-roslog:
