--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,11 @@
 {
 	"name": "Sailbot Workspace",
 	"dockerComposeFile": "docker-compose.yml",
-	"forwardPorts": [8000],
+	"forwardPorts": [
+		3000, // grafana
+		3005, // website
+		8000  // docs
+	],
 	"service": "sailbot-workspace",
 	"workspaceFolder": "/workspaces/sailbot_workspace",
 	"remoteUser": "ros",
@@ -46,6 +50,7 @@
 				"jeff-hykin.better-cpp-syntax",
 				"KevinRose.vsc-python-indent",
 				"llvm-vs-code-extensions.vscode-clangd",
+				"mongodb.mongodb-vscode",
 				"ms-python.flake8",
 				"ms-python.python",
 				"ms-vsliveshare.vsliveshare",
