--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,12 @@
 // See https://aka.ms/vscode-remote/devcontainer.json for format details.
 {
 	"name": "Sailbot Workspace",
-	"dockerComposeFile": "docker-compose.yml",
+	"dockerComposeFile": [
+		"docker-compose.db.yml",
+		"docker-compose.docs.yml",
+		"docker-compose.website.yml",
+		"docker-compose.yml"
+	],
 	"forwardPorts": [
 		3000, // grafana
 		3005, // website
