Specify repository in watch command

--- a/.github/workflows/test_definitions.yml
+++ b/.github/workflows/test_definitions.yml
@@ -124,6 +124,6 @@ jobs:
       run: |
           gh workflow run publish.yml -R UBCSailbot/docs
           sleep 5
-          gh run watch $(gh run list -R UBCSailbot/docs -w publish.yml -L1 --json databaseId --jq '.[0].databaseId')
+          gh run watch -R UBCSailbot/docs $(gh run list -R UBCSailbot/docs -w publish.yml -L1 --json databaseId --jq '.[0].databaseId')
     env:
       GH_TOKEN: ${{ secrets.PAT_TOKEN }}
