--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,7 +23,7 @@ jobs:
   test-definitions:
     # Runs another workflow, refer to
     # https://docs.github.com/en/actions/using-workflows/reusing-workflows#calling-a-reusable-workflow
-    uses: UBCSailbot/sailbot_workspace/.github/workflows/test_definitions.yml@user/patrick-5546/fix-rebuild-docs2
+    uses: UBCSailbot/sailbot_workspace/.github/workflows/test_definitions.yml@main
     with:
       repository: ${{ github.event.repository.name }}
       # VCS is used to clone all subteam repositories, so set to
@@ -35,4 +35,5 @@ jobs:
       rebuild-docs: true
     # https://docs.github.com/en/actions/using-workflows/reusing-workflows#using-inputs-and-secrets-in-a-reusable-workflow
     secrets:
+      # The repository secret `PAT_TOKEN` needs to exist, copy from Bitwarden
       gh-token: ${{ secrets.PAT_TOKEN }}
