--- a/.github/workflows/test_definitions.yml
+++ b/.github/workflows/test_definitions.yml
@@ -15,6 +15,31 @@ on:
       rebuild-docs:
         required: true
         type: boolean
+      uses-python:
+        required: true
+        type: boolean
+      uses-cpp:
+        required: true
+        type: boolean
+      uses-js:
+        required: true
+        type: boolean
+      colcon-test:
+        required: false
+        default: true
+        type: boolean
+      ament-lint:
+        required: false
+        default: true
+        type: boolean
+      markdownlint:
+        required: false
+        default: true
+        type: boolean
+      markdown-link-check:
+        required: false
+        default: true
+        type: boolean
     secrets:
       gh-token:
         required: true
@@ -22,6 +47,7 @@ on:
 jobs:
   colcon-test:
     runs-on: ubuntu-latest
+    if: ${{ inputs.colcon-test }}
     steps:
       - name: Checkout workspace
         uses: actions/checkout@v3
@@ -41,12 +67,13 @@ jobs:
           DISABLE_VCS: ${{ inputs.disable-vcs }}
 
   ament-lint:
-    name: ament_${{ matrix.linter }}
+    name: ament_lint
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
           linter: [lint_cmake, xmllint, flake8, pep257]
+    if: ${{ inputs.ament-lint }}
     steps:
       - name: Checkout workspace
         uses: actions/checkout@v3
@@ -60,14 +87,36 @@ jobs:
             repository: UBCSailbot/${{ inputs.repository }}
             path: src/${{ inputs.repository }}
 
-      - name: Run linter
+      - name: Run ament_xmllint
         uses: ./.github/actions/ament-lint/
         env:
-          LINTER: ${{ matrix.linter }}
+          LINTER: xmllint
+          DISABLE_VCS: ${{ inputs.disable-vcs }}
+
+      - name: Run ament_lint_cmake
+        if: ${{ inputs.uses-cpp }}
+        uses: ./.github/actions/ament-lint/
+        env:
+          LINTER: lint_cmake
+          DISABLE_VCS: ${{ inputs.disable-vcs }}
+
+      - name: Run ament_flake8
+        if: ${{ inputs.uses-python }}
+        uses: ./.github/actions/ament-lint/
+        env:
+          LINTER: flake8
+          DISABLE_VCS: ${{ inputs.disable-vcs }}
+
+      - name: Run ament_pep257
+        if: ${{ inputs.uses-python }}
+        uses: ./.github/actions/ament-lint/
+        env:
+          LINTER: pep257
           DISABLE_VCS: ${{ inputs.disable-vcs }}
 
   clang-tidy:
     runs-on: ubuntu-latest
+    if: ${{ inputs.uses-cpp }}
     steps:
       - name: Checkout workspace
         uses: actions/checkout@v3
@@ -89,6 +138,7 @@ jobs:
   # https://github.com/nosborn/github-action-markdown-cli
   markdownlint:
     runs-on: ubuntu-latest
+    if: ${{ inputs.markdownlint }}
     steps:
     - name: Check out code
       uses: actions/checkout@v3
@@ -105,6 +155,7 @@ jobs:
   # https://github.com/gaurav-nelson/github-action-markdown-link-check
   markdown-link-check:
     runs-on: ubuntu-latest
+    if: ${{ inputs.markdown-link-check }}
     steps:
     - name: Check out code
       uses: actions/checkout@v3
