--- a/.github/workflows/test_definitions.yml
+++ b/.github/workflows/test_definitions.yml
@@ -67,8 +67,12 @@ jobs:
           DISABLE_VCS: ${{ inputs.disable-vcs }}
 
   ament-lint:
-    name: ament_lint
+    name: ament_${{ matrix.linter }}
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+          linter: [lint_cmake, xmllint, flake8, pep257]
     if: ${{ inputs.ament-lint }}
     steps:
       - name: Checkout workspace
@@ -83,31 +87,15 @@ jobs:
             repository: UBCSailbot/${{ inputs.repository }}
             path: src/${{ inputs.repository }}
 
-      - name: Run ament_xmllint
+      - name: Run linter
+        if: |
+          ((${{ matrix.linter }} == 'lint_cmake') && inputs.uses-cpp) ||
+          ((${{ matrix.linter }} == 'xmllint')) ||
+          ((${{ matrix.linter }} == 'flake8') && inputs.uses-python) ||
+          ((${{ matrix.linter }} == 'pep257') && inputs.uses-python)
         uses: ./.github/actions/ament-lint/
         env:
-          LINTER: xmllint
-          DISABLE_VCS: ${{ inputs.disable-vcs }}
-
-      - name: Run ament_lint_cmake
-        if: ${{ inputs.uses-cpp }}
-        uses: ./.github/actions/ament-lint/
-        env:
-          LINTER: lint_cmake
-          DISABLE_VCS: ${{ inputs.disable-vcs }}
-
-      - name: Run ament_flake8
-        if: ${{ inputs.uses-python }}
-        uses: ./.github/actions/ament-lint/
-        env:
-          LINTER: flake8
-          DISABLE_VCS: ${{ inputs.disable-vcs }}
-
-      - name: Run ament_pep257
-        if: ${{ inputs.uses-python }}
-        uses: ./.github/actions/ament-lint/
-        env:
-          LINTER: pep257
+          LINTER: ${{ matrix.linter }}
           DISABLE_VCS: ${{ inputs.disable-vcs }}
 
   clang-tidy:
