Separated linters into their own jobs

--- a/.github/workflows/test_definitions.yml
+++ b/.github/workflows/test_definitions.yml
@@ -69,18 +69,10 @@ jobs:
         env:
           DISABLE_VCS: ${{ inputs.disable-vcs }}
 
-  ament-lint:
-    name: ament_${{ matrix.linter }}
+  ament_lint_cmake:
+    name: ament_lint_cmake
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-          linter: [lint_cmake, xmllint, flake8, pep257]
-    if: |
-      inputs.ament-lint && (((${{ matrix.linter }} == 'lint_cmake') && inputs.uses-cpp) 
-      || ((${{ matrix.linter }} == 'xmllint'))
-      || ((${{ matrix.linter }} == 'flake8') && inputs.uses-python)
-      || ((${{ matrix.linter }} == 'pep257') && inputs.uses-python))
+    if: ${{ inputs.ament-lint }} && ${{ inputs.uses-cpp }}
     steps:
       - name: Checkout workspace
         uses: actions/checkout@v3
@@ -97,7 +89,76 @@ jobs:
       - name: Run linter
         uses: ./.github/actions/ament-lint/
         env:
-          LINTER: ${{ matrix.linter }}
+          LINTER: lint_cmake
+          DISABLE_VCS: ${{ inputs.disable-vcs }}
+
+  ament_xmllint:
+    name: ament_xmllint
+    runs-on: ubuntu-latest
+    if: ${{ inputs.ament-lint }}
+    steps:
+      - name: Checkout workspace
+        uses: actions/checkout@v3
+        with:
+            repository: UBCSailbot/sailbot_workspace
+
+      - name: Checkout ROS package
+        if: ${{ inputs.repository }} != ${{ github.event.repository.name }}
+        uses: actions/checkout@v3
+        with:
+            repository: UBCSailbot/${{ inputs.repository }}
+            path: src/${{ inputs.repository }}
+
+      - name: Run linter
+        uses: ./.github/actions/ament-lint/
+        env:
+          LINTER: xmllint
+          DISABLE_VCS: ${{ inputs.disable-vcs }}
+
+  ament_flake8:
+    name: ament_flake8
+    runs-on: ubuntu-latest
+    if: ${{ inputs.ament-lint }} && ${{ inputs.uses-python }}
+    steps:
+      - name: Checkout workspace
+        uses: actions/checkout@v3
+        with:
+            repository: UBCSailbot/sailbot_workspace
+
+      - name: Checkout ROS package
+        if: ${{ inputs.repository }} != ${{ github.event.repository.name }}
+        uses: actions/checkout@v3
+        with:
+            repository: UBCSailbot/${{ inputs.repository }}
+            path: src/${{ inputs.repository }}
+
+      - name: Run linter
+        uses: ./.github/actions/ament-lint/
+        env:
+          LINTER: flake8
+          DISABLE_VCS: ${{ inputs.disable-vcs }}
+
+  ament_pep257:
+    name: ament_pep257
+    runs-on: ubuntu-latest
+    if: ${{ inputs.ament-lint }} && ${{ inputs.uses-python }}
+    steps:
+      - name: Checkout workspace
+        uses: actions/checkout@v3
+        with:
+            repository: UBCSailbot/sailbot_workspace
+
+      - name: Checkout ROS package
+        if: ${{ inputs.repository }} != ${{ github.event.repository.name }}
+        uses: actions/checkout@v3
+        with:
+            repository: UBCSailbot/${{ inputs.repository }}
+            path: src/${{ inputs.repository }}
+
+      - name: Run linter
+        uses: ./.github/actions/ament-lint/
+        env:
+          LINTER: pep257
           DISABLE_VCS: ${{ inputs.disable-vcs }}
 
   clang-tidy:
