--- a/.github/workflows/test_definitions.yml
+++ b/.github/workflows/test_definitions.yml
@@ -70,6 +70,7 @@ jobs:
         uses: actions/checkout@v3
         with:
             repository: UBCSailbot/sailbot_workspace
+            ref: user/dfriend01/add_lang_ci_args
 
       - name: Checkout ROS package
         if: ${{ inputs.repository }} != ${{ github.event.repository.name }}
