--- a/.github/workflows/test_definitions.yml
+++ b/.github/workflows/test_definitions.yml
@@ -44,6 +44,7 @@ jobs:
         uses: actions/checkout@v3
         with:
             repository: UBCSailbot/sailbot_workspace
+            ref: user/dfriend01/add_lang_ci_args
 
       - name: Checkout ROS package
         if: ${{ inputs.repository }} != ${{ github.event.repository.name }}
@@ -92,6 +93,7 @@ jobs:
         uses: actions/checkout@v3
         with:
             repository: UBCSailbot/sailbot_workspace
+            ref: user/dfriend01/add_lang_ci_args
 
       - name: Checkout ROS package
         if: ${{ inputs.repository }} != ${{ github.event.repository.name }}
@@ -114,6 +116,7 @@ jobs:
       uses: actions/checkout@v3
       with:
           repository: UBCSailbot/${{ inputs.repository }}
+          ref: user/dfriend01/add_lang_ci_args
 
     - name: Run linter
       uses: nosborn/github-action-markdown-cli@v3.3.0
@@ -131,6 +134,7 @@ jobs:
       uses: actions/checkout@v3
       with:
           repository: UBCSailbot/sailbot_workspace
+          ref: user/dfriend01/add_lang_ci_args
 
     - name: Run linter
       uses: gaurav-nelson/github-action-markdown-link-check@v1
