--- a/.github/workflows/test_definitions.yml
+++ b/.github/workflows/test_definitions.yml
@@ -46,7 +46,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-          linter: [lint_cmake, xmllint, flake8, pep257]
+          # ament_lint_common, except for the cpp linters: cppcheck, cpplint, and uncrustify
+          linter: [copyright, flake8, lint_cmake, pep257, xmllint]
     steps:
       - name: Checkout workspace
         uses: actions/checkout@v3
