--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,9 +23,11 @@ jobs:
   test-definitions:
     # Runs another workflow, refer to
     # https://docs.github.com/en/actions/using-workflows/reusing-workflows#calling-a-reusable-workflow
-    uses: UBCSailbot/sailbot_workspace/.github/workflows/test_definitions.yml@main
+    uses: UBCSailbot/sailbot_workspace/.github/workflows/test_definitions.yml@user/patrick-5546/setup-local-pathfinding
     with:
       repository: ${{ github.event.repository.name }}
+      # clang-tidy take a long time to run, so disable in repositories that don't need it
+      clang-tidy: true
       # VCS is used to clone all subteam repositories, so set to
       # true in subteam repositories and
       # false in sailbot_workspace
