--- a/.github/workflows/test_definitions.yml
+++ b/.github/workflows/test_definitions.yml
@@ -49,8 +49,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-          # ament_lint_common, except for copyright, cppcheck, cpplint, and uncrustify
-          linter: [lint_cmake, flake8, pep257, xmllint]
+          # ament_lint_common, except for copyright, cppcheck, cpplint, uncrustify, and pep257
+          linter: [lint_cmake, flake8, xmllint]
     steps:
       - name: Checkout workspace
         uses: actions/checkout@v3
