Add custom-interfaces input to test_definitions.yml

--- a/.github/workflows/test_definitions.yml
+++ b/.github/workflows/test_definitions.yml
@@ -9,6 +9,9 @@ on:
       clang-tidy:
         required: true
         type: boolean
+      custom-interfaces:
+        required: true
+        type: boolean
       disable-vcs:
         required: true
         type: string
@@ -38,6 +41,13 @@ jobs:
             repository: UBCSailbot/${{ inputs.repository }}
             path: src/${{ inputs.repository }}
 
+      - name: Checkout custom_interfaces ROS package
+        if: ${{ inputs.disable-vcs }} && ${{ inputs.custom-interfaces}}
+        uses: actions/checkout@v3
+        with:
+            repository: UBCSailbot/custom_interfaces
+            path: src/custom_interfaces
+
       - name: Test
         uses: ./.github/actions/test/
         env:
@@ -64,6 +74,13 @@ jobs:
             repository: UBCSailbot/${{ inputs.repository }}
             path: src/${{ inputs.repository }}
 
+      - name: Checkout custom_interfaces ROS package
+        if: ${{ inputs.disable-vcs }} && ${{ inputs.custom-interfaces}}
+        uses: actions/checkout@v3
+        with:
+            repository: UBCSailbot/custom_interfaces
+            path: src/custom_interfaces
+
       - name: Run linter
         uses: ./.github/actions/ament-lint/
         env:
@@ -85,6 +102,13 @@ jobs:
         with:
             repository: UBCSailbot/${{ inputs.repository }}
             path: src/${{ inputs.repository }}
+
+      - name: Checkout custom_interfaces ROS package
+        if: ${{ inputs.disable-vcs }} && ${{ inputs.custom-interfaces}}
+        uses: actions/checkout@v3
+        with:
+            repository: UBCSailbot/custom_interfaces
+            path: src/custom_interfaces
 
       - name: Run linter
         uses: ./.github/actions/clang-tidy/
