--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,7 +29,8 @@ jobs:
       # clang-tidy take a long time to run, so disable in repositories that don't need it
       clang-tidy: true
       # If the repository uses the msgs or srvs defined in custom_interfaces, set to true
-      custom-interfaces: true
+      # Set to false in sailbot_workspace (cloned using VCS) and custom_interfaces
+      custom-interfaces: false
       # VCS is used to clone all subteam repositories, so set to
       # true in subteam repositories and
       # false in sailbot_workspace
