--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,8 +28,8 @@ jobs:
       repository: ${{ github.event.repository.name }}
       # clang-tidy take a long time to run, so disable in repositories that don't need it
       clang-tidy: true
-      # If the repository uses the msgs or srvs defined in custom_interfaces, set to true
       # Set to false in sailbot_workspace (cloned using VCS) and custom_interfaces
+      # Else if the repository uses the msgs or srvs defined in custom_interfaces, set to true
       custom-interfaces: false
       # VCS is used to clone all subteam repositories, so set to
       # true in subteam repositories and
