--- a/.github/workflows/test_definitions.yml
+++ b/.github/workflows/test_definitions.yml
@@ -46,6 +46,7 @@ jobs:
         uses: actions/checkout@v3
         with:
             repository: UBCSailbot/custom_interfaces
+            ref: user/colinli02/custom_messages
             path: src/custom_interfaces
 
       - name: Test
@@ -79,6 +80,7 @@ jobs:
         uses: actions/checkout@v3
         with:
             repository: UBCSailbot/custom_interfaces
+            ref: user/colinli02/custom_messages
             path: src/custom_interfaces
 
       - name: Run linter
@@ -108,6 +110,7 @@ jobs:
         uses: actions/checkout@v3
         with:
             repository: UBCSailbot/custom_interfaces
+            ref: user/colinli02/custom_messages
             path: src/custom_interfaces
 
       - name: Run linter
